<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TestApp</string>
    <string name="empty" translatable="false"> </string>
    <string name="facebook_app_id" translatable="false">871377559876779</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb871377559876779</string>
    <string name="internal_server_error">Ошибка в сервере</string>
    <string name="tab_my_announcements_active">Активные</string>
    <string name="tab_my_announcements_incheck">На проверке</string>
    <string name="tab_my_announcements_inactive">Неактивные</string>
    <string name="tab_balance_history">История операция</string>
    <string name="tab_balance_my_balance">Мой баланс</string>
    <string name="text_choose_language">Выберите язык</string>
    <string name="text_back">Назад</string>
    <string name="text_submit">Выбрать</string>
    <string name="message_no_connection">Нет подключения к интернету</string>
    <string name="title_audio_news">Аудио новости</string>
    <string name="text_select_language">Выбрать язык</string>
    <string name="today">Сегодня</string>
    <string name="check_the_connection">Убедитесь, что вы подключены к Интернету</string>
    <string name="text_registration">Регистрация</string>
    <string name="text_no_items">Объявления не найдены</string>
    <string name="text_refresh">Повторение</string>
    <string name="toast_login_disabled">Невозможно зарегистрироваться</string>
    <string name="text_yes">Да</string>
    <string name="text_add_product">Добавить объявление</string>
    <string name="text_year">г.</string>
    <string name="title_required">Заголовок <font fgcolor='#C71923'>*</font> </string>
    <string name="description_required">Описание <font fgcolor='#C71923'>*</font></string>
    <string name="category_required">Категория <font fgcolor='#C71923'>*</font></string>
    <string name="user_required">Контактное лицо <font fgcolor='#C71923'>*</font></string>
    <string name="number_required">Номер телефона <font fgcolor='#C71923'>*</font></string>
    <string name="price_required">Цена <font fgcolor='#C71923'>*</font></string>
    <string name="logo_image">logo image</string>
    <string name="select_category">Выбрать категория</string>
    <string name="text_some">Недвижимость, Квартиры, Посуточно</string>
    <string name="select_city">Выбрать регион</string>
    <string name="select_district">Выбрать район</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="price">Цены</string>
    <string name="text_continue">Продолжить</string>
    <string name="additional_filtr">Дополнительный фильтр</string>
    <string name="one_day">На 1 день</string>
    <string name="one_week">На 1 неделю</string>
    <string name="deadline">Срок</string>
    <string name="currency">Валюта</string>
    <string name="id">ID</string>
    <string name="attached">Размещено</string>
    <string name="viewed">Просмотры</string>
    <string name="write">Написать</string>
    <string name="call">Позвонить</string>
    <string name="expand_announcement">Продвинуть объявление</string>
    <string name="send_image">Отправить картинку</string>
    <string name="edit_text">Введите текст</string>
    <string name="add_balance">Пополнить счет</string>
    <string name="log_in">Войти</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Придумайте пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="_998">+998</string>
    <string name="register">Регистрация</string>
    <string name="register_descr">Зарегистрируйтесь на сайте с помощью номер телефона</string>
    <string name="enter_descr">Войдите помощью номер телефона или через социальную сеть</string>
    <string name="sms_config">СМС конфигурация</string>
    <string name="enter_verification">Введите проверочный код</string>
    <string name="some_text_1">Вы можете ввести дополнительную информацию, чтобы другие могли узнать о вас</string>
    <string name="name">Ваше имя</string>
    <string name="email">Почта</string>
    <string name="store_image">Изображение магазина</string>
    <string name="category">Категории</string>
    <string name="filter">Фильтр</string>
    <string name="fio">Ваше имя и фамилия</string>
    <string name="no_number">Номер не настроен</string>
    <string name="male">Мужчина</string>
    <string name="female">Женшина</string>
    <string name="no_gender">Пол не выбран</string>
    <string name="no_email">Почта не установлена</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="save">Сохранить</string>
    <string name="profile">Профиль</string>
    <string name="cancel">Отмена</string>
    <string name="_3">3</string>
    <string name="my_announcements">Мои объявления</string>
    <string name="all">Все</string>
    <string name="not_selected">Не выбран</string>
    <string name="pick_city">Выберите город</string>
    <string name="y_e">y.e</string>
    <string name="sum">сум</string>
    <string name="search_hint">Поиск...</string>
    <string name="photo_only">Показывать объявления только с фото</string>
    <string name="sort_date_new">Самые новые</string>
    <string name="sort_date_hight">От дешевых к дорогим</string>
    <string name="sort_date_low">От дорогих к дешевым</string>
    <string name="active">Активные</string>
    <string name="in_moderation">На проверке</string>
    <string name="inactive">Неактивные</string>
    <string name="blocked">Заблокированные</string>
    <string name="all_time">За все время</string>
    <string name="weekly">За 7 дней</string>
    <string name="daily">За 24 часа</string>
    <string name="about_text">Bisyor — интернет-сервис для размещения объявлений о товарах, вакансиях и резюме на рынке труда, а также услугах от частных лиц и компаний, занимающий второе место в мире и первое в Узбекистане среди онлайн-классифайдов.</string>
    <string name="tarif">Тариф</string>
    <string name="tarif_text">Выберите один из предложенных тарифных планов</string>
    <string name="marked">Выделение в каталоге</string>
    <string name="imported">Импорт объявлений</string>
    <string name="fixed">Закрепление в каталоге</string>
    <string name="comment">Комментарий</string>
    <string name="image">Рисунок</string>
    <string name="email_address">Email-адрес</string>
    <string name="region_required">Город <font fgcolor='#C71923'>*</font> </string>
    <string name="galereya">Галерея</string>
    <string name="mozaic">Плитка</string>
    <string name="gallery">Галерея</string>
    <string name="list">Список</string>
    <string name="text_edit_product">Редактировать объявление</string>
    <string name="text_menu_view">Посмотреть</string>
    <string name="text_menu_edit">Редактировать</string>
    <string name="text_menu_activate">Активировать</string>
    <string name="text_menu_delete">Удалить</string>
    <string name="menu_text_inactivate">Деактивировать</string>
    <string name="text_menu_up">Включить автоподнятие</string>
    <string name="repeat">Повторить</string>
    <string name="chat_by_sale">Покупка</string>
    <string name="chat_with_user">Для частного лица</string>
    <string name="chat_by_purchase">Продажа</string>
    <string name="chat_all">Все сообщения</string>
    <string name="add_social">+ ещё социальная сеть</string>
    <string name="site_address">Ссылка на сайт</string>
    <string name="social">Социальные сети</string>
    <string name="additional_phone">Дополнительные номера</string>
    <string name="photos">Фотографии</string>
    <string name="change">Изменить</string>
    <string name="edit">Редактировать</string>
    <string name="selectedimageicon">значок выбранного изображения</string>
    <string name="pay">Оплатить</string>
    <string name="claim">Пожаловаться</string>
    <string name="claim_announcement">Пожаловаться на объявление</string>
    <string name="contacts">Контакты</string>
    <string name="announcements">Объявления</string>
    <string name="stores">Магазин</string>
    <string name="categories">Категории:</string>
    <string name="more">Больше</string>
    <string name="comments">Комментарии</string>
    <string name="advertise_items">Рекламировать</string>
    <string name="preview">Предварительный просмотр</string>
    <string name="message">Сообщение</string>
    <string name="searches">Поиски</string>
    <string name="sellers">Продавцы</string>
    <string name="toolbar_favourites">Избранные</string>
    <string name="my_stores">Мои магазины</string>
    <string name="add_announcement">Добавить новое объявление</string>
    <string name="no_item_in_store">На магазине нету объявлений</string>
    <string name="follow_user">Подписатся к пользователю</string>
    <string name="unfollow_user">Отписаться от пользователя</string>
    <string name="images">Фотографии</string>
    <string name="main_fields">Основные данные</string>
    <string name="other_properties">Другие характеристики</string>
    <string name="contact_info">Контактные данные</string>
    <string name="geo_data">Геоданные</string>
    <string name="additional_links">Дополнительные ссылки</string>
    <string name="period">Срок публикации</string>
    <string name="store_required">Магазин <font fgcolor='#C71923'>*</font> </string>
    <string name="view">Посмотреть</string>
    <string name="less">Меньше</string>
    <string name="language_latin">Узбек латинская</string>
    <string name="language_kiril">Узбек кирилская</string>
    <string name="language_ru">Русский язык</string>
    <string name="add_balance_message">Введите сумму, на которую хотите пополнить свой счет. Напишите сумму в узбекской валюте</string>
    <string name="edit_amount">Введите сумму</string>
    <string name="payme">Payme</string>
    <string name="click">Click</string>
    <string name="paynet" tools:ignore="DuplicateDefinition">Paynet</string>
    <string name="confirm_delete_message">Вы действительно хотите удалить свой аккаунт</string>
    <string name="confirm_delete">Да, Удалить</string>
    <string name="delete_account_title">Удаление аккаунта</string>
    <string name="without_ad">Продолжить без рекламы</string>
    <string name="go_payment">Перейти к оплате</string>
    <string name="service_packet">Или один из сервисов для удобства</string>
    <string name="service_service">Выберите понравившееся услугу</string>
    <string name="select_store">Выберите магазин</string>
    <string name="select_images">Выберите изображения</string>
    <string name="no_edit_announcement_category">Вы не можете изменить категорию и магазин обявления после его создания</string>
    <string name="popular">Популярное</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="announcement_claim_text">Запишите причины, по которым вы считаете это объявление неприемлемым:</string>
    <string name="reason">Причина</string>
    <string name="reason_title">Выберите причина</string>
    <string name="send_claim">Отправить жалобу</string>
    <string name="promocode">Промокод</string>
    <string name="about_app">О приложении</string>
    <string name="premium_items">Премиум объявления</string>
    <string name="last_items">Последние объявления</string>
    <string name="favourites">Избранные</string>
    <string name="change_profile">Изменить профиль</string>
    <string name="your_balance">Ваш баланс:</string>
    <string name="login_for_functions">Войдите, чтобы использовать все функции приложения</string>
    <string name="main_categories">Основные категории</string>
    <string name="enter_new_password">Придумайте новый пароль</string>
    <string name="new_password">Придумайте пароль</string>
    <string name="menu_home">Домой</string>
    <string name="menu_saved">Поиск</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_message">Чат</string>
    <string name="menu_profile">Профиль</string>
</resources>