<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home"
        android:icon="@drawable/switch_menu_home"
        android:title="@string/menu_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/switch_menu_saved"
        android:title="@string/menu_saved"
        app:showAsAction="always" />
    <item
        android:id="@+id/create_item"
        android:icon="@drawable/micon_menu_addproduct"
        android:title="@string/menu_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/switch_menu_messages"
        android:title="@string/menu_message"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/switch_menu_profile"
        android:title="@string/menu_profile"
        app:showAsAction="always" />

</menu>