<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_view"
        android:icon="@drawable/ic_menu"
        android:title="@string/text_menu_view"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_menu"
        android:title="@string/text_menu_edit"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_inactivate"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu_text_inactivate"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_up"
        android:icon="@drawable/ic_menu"
        android:title="@string/text_menu_up"
        app:showAsAction="collapseActionView" />

</menu>