<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Bisyor.SurfaceStyle"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_ripple_borderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="6dp"
        android:src="@drawable/vicon_arrow_back" />

    <TextView
        style="@style/Bisyor.TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="sans-serif"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/enter_new_password"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:hint="@string/new_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                set_clear_parent_error="@{`as`}"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:text="@={viewModel.edNewPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginTop="12dp"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_confirm_password"
                android:layout_width="match_parent"
                set_clear_parent_error="@{`as`}"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewModel.edNewPasswordConfirm}" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_continue" />

    </RelativeLayout>

</LinearLayout>