<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- AppBarLayout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stateListAnimator="@animator/appbar_not_elevated">

        <!-- Toolbar and Search Layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:scaleType="fitStart"
                android:src="@drawable/logo"
                android:text="@string/category"
                style="@style/Bisyor.TitleText"
                android:textScaleX="1.05"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_filter"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:layout_alignTop="@id/text"
                android:background="@drawable/custom_ripple_borderless"
                android:clickable="true"
                android:contentDescription="@string/filter"
                android:focusable="true"
                android:padding="3dp"
                android:src="@drawable/vicon_filter"
                android:translationZ="2dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bck_search_view"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                app:defaultQueryHint="@string/search_hint"
                app:iconifiedByDefault="false"
                app:queryBackground="@null" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Clicker_Back -->
            <RelativeLayout
                android:id="@+id/clicker_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple"
                android:elevation="10dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/back_title"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/main_categories"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/vicon_back_chevron" />
            </RelativeLayout>

            <!-- RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" /> <!-- Initially hidden -->
</androidx.coordinatorlayout.widget.CoordinatorLayout>
