<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:stateListAnimator="@animator/appbar_not_elevated">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/logo" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/clicker_more"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/custom_ripple_borderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/vicon_more_vert" />

            </RelativeLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                style="@style/TabStyle"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/transparent"
                app:tabMode="fixed"
                app:layout_scrollFlags="noScroll"
                app:tabTextAppearance="@style/TabStyle">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_all" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_by_sale" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_by_purchase" />

            </com.google.android.material.tabs.TabLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:visibility="visible" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>