<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.fragment.FragmentFavourites">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stateListAnimator="@animator/appbar_not_elevated">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:padding="6dp"
                    android:src="@drawable/vicon_arrow_back" />

                <TextView
                    style="@style/Bisyor.TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/back_button"
                    android:text="@string/toolbar_favourites"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/more_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:padding="6dp"
                    android:src="@drawable/vicon_more_vert" />

            </RelativeLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                style="@style/TabStyle"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/transparent"
                android:scrollbars="none"
                app:tabIndicatorHeight="3dp"
                app:tabMode="fixed"
                app:tabTextAppearance="@style/TabBoxStyle">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/announcements" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searches" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sellers" />


            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/itemsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_product_grid"
                    tools:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_product_grid"
                    tools:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/subscriptionList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_subscription"
                    tools:visibility="visible" />


            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>
</layout>